# teste_spro

./: AvaliacaoDataOps.docx  aggregation.js  cria_dfs.py  db.py  pyproject.toml
Dados/: Teste.Carros.json  Teste.Montadoras.json
src/: cria_dfs.py  db.py
